--- a/Level1/Unit3/DataGrammar3/aulas/aula1/index.html
+++ b/Level1/Unit3/DataGrammar3/aulas/aula1/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GRAMMAR</title>
   <style>
     body {
@@ -101,14 +101,18 @@
       display: block;
       margin: 10px auto;
     }
-    .table-line {
-      font-family: monospace;
-      background-color: #f9f9f9;
-      border: 1px solid #ccc;
-      padding: 5px 10px;
+    .table-row {
+      display: flex;
       margin: 4px 0;
-      white-space: pre;
-      border-radius: 4px;
+    }
+    .table-row .cell {
+      flex: 1;
+      padding: 5px 8px;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
+    }
+    .table-row .cell:not(:last-child) {
+      border-right: none;
     }
   </style>
 </head>
@@ -141,84 +145,156 @@
     let texts = [];
     let isPlaying = false;
     let currentIndex = 0;
-    let utterance;
     let pauseTimeout;
 
     async function loadTextFile() {
-      try {
-        const response = await fetch('lesson.txt');
-        if (!response.ok) throw new Error('Erro ao carregar o arquivo.');
-        const data = await response.text();
-        processTextFile(data);
-      } catch (error) {
-        console.error(error);
-        alert('Não foi possível carregar a lição.');
-      }
+      const resp = await fetch('lesson.txt');
+      if (!resp.ok) { alert('Não foi possível carregar a lição.'); return; }
+      const data = await resp.text();
+      processTextFile(data);
     }
 
     function processTextFile(data) {
       const lines = data.split('\n');
-      const contentDiv = document.getElementById('content');
+      const content = document.getElementById('content');
 
-      lines.forEach((line, index) => {
+      lines.forEach((line, idx) => {
         if (!line.trim()) return;
         const parts = line.split('|');
         const type = parts[0];
         const lang = parts[1] || '';
-        const text = parts.slice(2).join('|').trim();
-        let element;
+        const raw = parts.slice(2).join('|').trim();
+        let el;
 
-        switch (type) {
-          case 'title': element = document.createElement('h1'); break;
-          case 'subtitle': element = document.createElement('h2'); break;
-          case 'text': element = document.createElement('p'); break;
-          case 'text-bold': element = document.createElement('p'); element.style.fontWeight = 'bold'; break;
-          case 'text-bold-large': element = document.createElement('p'); element.style.fontWeight = 'bold'; element.style.fontSize = '1.5em'; break;
-          case 'spacer': element = document.createElement('div'); element.className = 'spacer'; break;
-          case 'image':
-            element = document.createElement('img');
-            element.src = '../../../../../' + text;
-            element.alt = 'Imagem da lição';
-            break;
-          case 'table-row':
-            element = document.createElement('pre');
-            element.className = 'table-line';
-            element.textContent = text;
-            break;
-          default:
-            console.warn('Tipo desconhecido:', type);
+        if (type === 'table-row') {
+          const cells = raw.split('|').map(c => c.trim());
+          el = document.createElement('div');
+          el.className = 'table-row';
+          cells.forEach(cell => {
+            const m = cell.match(/\[([^\]]+)\](.*)/);
+            const span = document.createElement('span');
+            span.className = 'cell';
+            if (m) {
+              span.lang = m[1];
+              span.textContent = m[2].trim();
+            } else {
+              span.textContent = cell;
+            }
+            el.appendChild(span);
+          });
+          // push entry for voice
+          texts.push({ id: idx, type: 'table-row', el });
+        } else {
+          let text = raw;
+          switch (type) {
+            case 'title':
+              el = document.createElement('h1');
+              el.textContent = text;
+              break;
+            case 'subtitle':
+              el = document.createElement('h2');
+              el.textContent = text;
+              break;
+            case 'text':
+              el = document.createElement('p');
+              el.textContent = text;
+              break;
+            case 'text-bold':
+              el = document.createElement('p');
+              el.style.fontWeight = 'bold';
+              el.textContent = text;
+              break;
+            case 'text-bold-large':
+              el = document.createElement('p');
+              el.style.fontWeight = 'bold';
+              el.style.fontSize = '1.5em';
+              el.textContent = text;
+              break;
+            case 'spacer':
+              el = document.createElement('div');
+              el.className = 'spacer';
+              break;
+            case 'image':
+              el = document.createElement('img');
+              el.src = '../../' + raw;
+              el.alt = '';
+              break;
+            default:
+              console.warn('Tipo desconhecido:', type);
+          }
+          if (el && type !== 'image' && type !== 'spacer') {
+            texts.push({ id: idx, type, lang, text: raw, el });
+          }
         }
-
-        if (element) {
-          element.lang = lang;
-          element.dataset.index = index;
-          contentDiv.appendChild(element);
-          if (type !== 'spacer' && type !== 'image') {
-            texts.push({ id: index, lang, text });
-            element.addEventListener('click', () => handleTextClick(index));
+        if (el) {
+          el.dataset.index = idx;
+          content.appendChild(el);
+          if (type !== 'image' && type !== 'spacer') {
+            el.addEventListener('click', () => handleTextClick(idx));
           }
         }
       });
     }
 
-    function handleTextClick(index) {
+    function handleTextClick(idx) {
       speechSynthesis.cancel();
-      currentIndex = texts.findIndex(t => t.id === index);
+      currentIndex = texts.findIndex(t => t.id === idx);
       isPlaying = true;
       clearTimeout(pauseTimeout);
       updateButton();
-      speakText(currentIndex);
+      speakEntry(currentIndex);
     }
 
     function toggleLesson() {
       isPlaying = !isPlaying;
       updateButton();
-      if (isPlaying) startLesson(); else pauseLesson();
+      if (isPlaying) speakEntry(currentIndex); else pauseLesson();
     }
 
-    function startLesson() {
-      if (currentIndex >= texts.length) currentIndex = 0;
-      speakText(currentIndex);
+    function updateButton() {
+      const btn = document.getElementById('toggleButton');
+      const icon = isPlaying ? 'bi-pause-fill' : 'bi-play-fill';
+      btn.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi ${icon}" viewBox="0 0 16 16"></svg> ${isPlaying ? 'Pause' : 'Start'} Lesson`;
+    }
+
+    function speakEntry(i) {
+      if (i >= texts.length) return pauseLesson();
+      const entry = texts[i];
+      const el = entry.el;
+      document.querySelectorAll('.highlight').forEach(e => e.classList.remove('highlight'));
+      el.classList.add('highlight');
+      if (entry.type === 'table-row') {
+        const spans = Array.from(el.querySelectorAll('.cell'));
+        let c = 0;
+        function speakCell() {
+          if (c >= spans.length) {
+            el.classList.remove('highlight');
+            currentIndex++;
+            return isPlaying ? speakEntry(currentIndex) : pauseLesson();
+          }
+          const s = spans[c];
+          s.classList.add('highlight');
+          const u = new SpeechSynthesisUtterance(s.textContent);
+          u.lang = s.getAttribute('lang');
+          u.onend = () => { s.classList.remove('highlight'); c++; speakCell(); };
+          speechSynthesis.cancel();
+          speechSynthesis.speak(u);
+        }
+        speakCell();
+      } else {
+        const u = new SpeechSynthesisUtterance(entry.text);
+        u.lang = entry.lang;
+        u.onend = () => {
+          el.classList.remove('highlight');
+          currentIndex++;
+          isPlaying ? speakEntry(currentIndex) : pauseLesson();
+        };
+        const robot = document.getElementById('robotImage');
+        robot.src = '../../../../../imagens/robo1.gif';
+        speechSynthesis.cancel();
+        speechSynthesis.speak(u);
+      }
+      el.scrollIntoView({ block: 'center', behavior: 'smooth' });
     }
 
     function pauseLesson() {
@@ -228,32 +304,6 @@
       const robot = document.getElementById('robotImage');
       robot.src = '../../../../../imagens/robo1_static.png';
       pauseTimeout = setTimeout(() => { robot.src = '../../../../../imagens/robo2.gif'; }, 5000);
-    }
-
-    function updateButton() {
-      const btn = document.getElementById('toggleButton');
-      const iconClass = isPlaying ? 'bi-pause-fill' : 'bi-play-fill';
-      btn.innerHTML = `<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\" fill=\"currentColor\" class=\"bi ${iconClass}\" viewBox=\"0 0 16 16\"></svg> ${isPlaying ? 'Pause' : 'Start'} Lesson`;
-    }
-
-    function speakText(idx) {
-      if (idx >= texts.length) return pauseLesson();
-      const { text, lang } = texts[idx];
-      const el = document.querySelector(`[data-index='${texts[idx].id}']`);
-      if (!text) return;
-      document.querySelectorAll('.highlight').forEach(e => e.classList.remove('highlight'));
-      el.classList.add('highlight');
-      utterance = new SpeechSynthesisUtterance(text);
-      utterance.lang = lang;
-      const robot = document.getElementById('robotImage');
-      robot.src = '../../../../../imagens/robo1.gif';
-      utterance.onend = () => {
-        el.classList.remove('highlight');
-        if (isPlaying) { currentIndex++; speakText(currentIndex); } else pauseLesson();
-      };
-      speechSynthesis.cancel();
-      speechSynthesis.speak(utterance);
-      el.scrollIntoView({ block: 'center', behavior: 'smooth' });
     }
 
     window.onload = loadTextFile;
