--- a/Level1/Unit3/DataGrammar3/aulas/aula5/index - Copy.html
+++ b/Level1/Unit3/DataGrammar3/aulas/aula5/index - Copy.html
@@ -14,8 +14,6 @@
       background-repeat: repeat;
       background-size: auto;
       color: #333;
-      overflow: hidden; /* <-- impede rolagem do body */
-      height: 100vh;     /* <-- define altura total da tela */
     }
     header {
       position: fixed;
@@ -79,19 +77,16 @@
       color: white;
     }
     .content-wrapper {
-  position: absolute;
-  top: 180px;
-  height: calc(100vh - 180px); /* substitui o uso de bottom: 0 */
-  overflow-y: auto;
-  padding: 20px;
-  background-color: white;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
-  width: 90%;
-  max-width: 800px;
-  left: 50%;
-  transform: translateX(-50%);
-}
+      margin: 160px auto 20px auto;
+      padding: 20px;
+      background-color: white;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      border-radius: 8px;
+      overflow-y: auto;
+      max-height: calc(100vh - 180px);
+      width: 90%;
+      max-width: 800px;
+    }
     .highlight {
       background-color: yellow;
     }
