--- a/Atividades/Grammar3/index.html
+++ b/Atividades/Grammar3/index.html
@@ -203,8 +203,8 @@
             background-color: #28a745;
             color: #fff;
         }
-        .grammar-table tr:nth-child(even) {
-            background-color: #f9f9f9;
+        .grammar-table td {
+            background-color: white;
         }
     </style>
 </head>
