--- a/Atividades/Aulas_traduzidas/index - Copy.html
+++ b/Atividades/Aulas_traduzidas/index - Copy.html
@@ -14,8 +14,8 @@
       background-repeat: repeat;
       background-size: auto;
       color: #333;
-      overflow: hidden; /* impede rolagem do body */
-      height: 100vh;     /* define altura total da tela */
+      overflow: hidden; /* <-- impede rolagem do body */
+      height: 100vh;     /* <-- define altura total da tela */
     }
     header {
       position: fixed;
@@ -79,19 +79,19 @@
       color: white;
     }
     .content-wrapper {
-      position: absolute;
-      top: 180px;
-      height: calc(100vh - 180px); /* substitui bottom */
-      overflow-y: auto;
-      padding: 20px;
-      background-color: white;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      border-radius: 8px;
-      width: 90%;
-      max-width: 800px;
-      left: 50%;
-      transform: translateX(-50%);
-    }
+  position: absolute;
+  top: 180px;
+  height: calc(100vh - 180px); /* substitui o uso de bottom: 0 */
+  overflow-y: auto;
+  padding: 20px;
+  background-color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  width: 90%;
+  max-width: 800px;
+  left: 50%;
+  transform: translateX(-50%);
+}
     .highlight {
       background-color: yellow;
     }
@@ -147,21 +147,13 @@
   </div>
 
   <script>
-    // Função para ler parâmetro da URL
-    function getURLParam(name) {
-      const params = new URLSearchParams(window.location.search);
-      return params.get(name) || '';
-    }
-
     let texts = [];
     let isPlaying = false;
     let currentIndex = 0;
     let pauseTimeout;
 
     async function loadTextFile() {
-      // Pega o caminho de lesson.txt via URL
-      const path = getURLParam('lessonPath') || 'lesson.txt';
-      const resp = await fetch(path);
+      const resp = await fetch('lesson.txt');
       if (!resp.ok) { alert('Não foi possível carregar a lição.'); return; }
       const data = await resp.text();
       processTextFile(data);
@@ -170,6 +162,7 @@
     function processTextFile(data) {
       const lines = data.split('\n');
       const content = document.getElementById('content');
+
       lines.forEach((line, idx) => {
         if (!line.trim()) return;
         const parts = line.split('|');
@@ -186,22 +179,53 @@
             const m = cell.match(/\[([^\]]+)\](.*)/);
             const span = document.createElement('span');
             span.className = 'cell';
-            if (m) { span.lang = m[1]; span.textContent = m[2].trim(); }
-            else { span.textContent = cell; }
+            if (m) {
+              span.lang = m[1];
+              span.textContent = m[2].trim();
+            } else {
+              span.textContent = cell;
+            }
             el.appendChild(span);
           });
+          // push entry for voice
           texts.push({ id: idx, type: 'table-row', el });
         } else {
           let text = raw;
           switch (type) {
-            case 'title': el = document.createElement('h1'); el.textContent = text; break;
-            case 'subtitle': el = document.createElement('h2'); el.textContent = text; break;
-            case 'text': el = document.createElement('p'); el.textContent = text; break;
-            case 'text-bold': el = document.createElement('p'); el.style.fontWeight = 'bold'; el.textContent = text; break;
-            case 'text-bold-large': el = document.createElement('p'); el.style.fontWeight = 'bold'; el.style.fontSize = '1.5em'; el.textContent = text; break;
-            case 'spacer': el = document.createElement('div'); el.className = 'spacer'; break;
-            case 'image': el = document.createElement('img'); el.src = '../../' + raw; el.alt = ''; break;
-            default: console.warn('Tipo desconhecido:', type);
+            case 'title':
+              el = document.createElement('h1');
+              el.textContent = text;
+              break;
+            case 'subtitle':
+              el = document.createElement('h2');
+              el.textContent = text;
+              break;
+            case 'text':
+              el = document.createElement('p');
+              el.textContent = text;
+              break;
+            case 'text-bold':
+              el = document.createElement('p');
+              el.style.fontWeight = 'bold';
+              el.textContent = text;
+              break;
+            case 'text-bold-large':
+              el = document.createElement('p');
+              el.style.fontWeight = 'bold';
+              el.style.fontSize = '1.5em';
+              el.textContent = text;
+              break;
+            case 'spacer':
+              el = document.createElement('div');
+              el.className = 'spacer';
+              break;
+            case 'image':
+              el = document.createElement('img');
+              el.src = '../../' + raw;
+              el.alt = '';
+              break;
+            default:
+              console.warn('Tipo desconhecido:', type);
           }
           if (el && type !== 'image' && type !== 'spacer') {
             texts.push({ id: idx, type, lang, text: raw, el });
@@ -234,8 +258,8 @@
 
     function updateButton() {
       const btn = document.getElementById('toggleButton');
-      const iconClass = isPlaying ? 'bi-pause-fill' : 'bi-play-fill';
-      btn.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi ${iconClass}" viewBox="0 0 16 16"></svg> ${isPlaying ? 'Pause' : 'Start'} Lesson`;
+      const icon = isPlaying ? 'bi-pause-fill' : 'bi-play-fill';
+      btn.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi ${icon}" viewBox="0 0 16 16"></svg> ${isPlaying ? 'Pause' : 'Start'} Lesson`;
     }
 
     function speakEntry(i) {
@@ -248,7 +272,11 @@
         const spans = Array.from(el.querySelectorAll('.cell'));
         let c = 0;
         function speakCell() {
-          if (c >= spans.length) { el.classList.remove('highlight'); currentIndex++; return isPlaying ? speakEntry(currentIndex) : pauseLesson(); }
+          if (c >= spans.length) {
+            el.classList.remove('highlight');
+            currentIndex++;
+            return isPlaying ? speakEntry(currentIndex) : pauseLesson();
+          }
           const s = spans[c];
           s.classList.add('highlight');
           const u = new SpeechSynthesisUtterance(s.textContent);
@@ -261,7 +289,11 @@
       } else {
         const u = new SpeechSynthesisUtterance(entry.text);
         u.lang = entry.lang;
-        u.onend = () => { el.classList.remove('highlight'); currentIndex++; isPlaying ? speakEntry(currentIndex) : pauseLesson(); };
+        u.onend = () => {
+          el.classList.remove('highlight');
+          currentIndex++;
+          isPlaying ? speakEntry(currentIndex) : pauseLesson();
+        };
         const robot = document.getElementById('robotImage');
         robot.src = '../../../../../imagens/robo1.gif';
         speechSynthesis.cancel();
