--- a/Atividades/Grammar3/index.html
+++ b/Atividades/Grammar3/index.html
@@ -295,6 +295,22 @@
                     else if (t.startsWith('## ')) {
                         html += `<h3 class="subtitle">${t.slice(3).toUpperCase()}</h3>`;
                     }
+else if (t.startsWith('#IMG:')) {
+    const imageName = t.split(':')[1].trim();
+    const lessonPath = filePath;
+    const basePath = lessonPath.substring(0, lessonPath.lastIndexOf('/'));
+    const imagePathPrimary = `${basePath}/${imageName}`;
+    const imagePathSecondary = `${basePath}/../${imageName}`;
+
+    const img = document.createElement('img');
+    img.alt = imageName;
+    img.style = "max-width: 100%; display: block; margin: 20px auto; border-radius: 8px;";
+    img.onload = () => contentDiv.appendChild(img);
+    img.onerror = () => {
+        img.src = imagePathSecondary;
+    };
+    img.src = imagePathPrimary;
+}
                     else if (t.startsWith('# ')) {
                         if (inTable) { html += '</div>'; inTable = false; }
                         html += `<div class="section"><h2>${t.slice(2)}</h2>`;
@@ -440,15 +456,7 @@
         fetch(path)
             .then(r => r.ok ? img.src = path : Promise.reject())
             .catch(() => img.src = 'default-image.png');
-    }
-
-    function getLevelAndUnitFromURL() {
-        const params = new URLSearchParams(window.location.search);
-        return {
-            level: params.get('level'),
-            unit: params.get('unit')
-        };
-    }
+    }  
 
     document.addEventListener('DOMContentLoaded', () => {
         loadTextFile();
