--- a/Atividades/Grammar3/index.html
+++ b/Atividades/Grammar3/index.html
@@ -302,14 +302,12 @@ else if (t.startsWith('#IMG:')) {
     const imagePathPrimary = `${basePath}/${imageName}`;
     const imagePathSecondary = `${basePath}/../${imageName}`;
 
-    const img = document.createElement('img');
-    img.alt = imageName;
-    img.style = "max-width: 100%; display: block; margin: 20px auto; border-radius: 8px;";
-    img.onload = () => contentDiv.appendChild(img);
-    img.onerror = () => {
-        img.src = imagePathSecondary;
-    };
-    img.src = imagePathPrimary;
+    html += `
+    <img src="${imagePathPrimary}" 
+         onerror="this.onerror=null;this.src='${imagePathSecondary}'" 
+         alt="${imageName}" 
+         style="max-width: 100%; display: block; margin: 20px auto; border-radius: 8px;" />
+`;
 }
                     else if (t.startsWith('# ')) {
                         if (inTable) { html += '</div>'; inTable = false; }
