--- a/Atividades/Aulas_traduzidas/index - Copy (2).html
+++ b/Atividades/Aulas_traduzidas/index - Copy (2).html
@@ -170,7 +170,6 @@
     function processTextFile(data) {
       const lines = data.split('\n');
       const content = document.getElementById('content');
-      const basePath = (getURLParam('lessonPath') || '').split('/').slice(0, -1).join('/');
       lines.forEach((line, idx) => {
         if (!line.trim()) return;
         const parts = line.split('|');
@@ -201,11 +200,7 @@
             case 'text-bold': el = document.createElement('p'); el.style.fontWeight = 'bold'; el.textContent = text; break;
             case 'text-bold-large': el = document.createElement('p'); el.style.fontWeight = 'bold'; el.style.fontSize = '1.5em'; el.textContent = text; break;
             case 'spacer': el = document.createElement('div'); el.className = 'spacer'; break;
-            case 'image':
-  el = document.createElement('img');
-  el.src = `${basePath}/${raw}`;
-  el.alt = raw;
-  break;
+            case 'image': el = document.createElement('img'); el.src = '../../' + raw; el.alt = ''; break;
             default: console.warn('Tipo desconhecido:', type);
           }
           if (el && type !== 'image' && type !== 'spacer') {
