--- a/Atividades/Aulas_traduzidas/index.html
+++ b/Atividades/Aulas_traduzidas/index.html
@@ -203,8 +203,15 @@
             case 'spacer': el = document.createElement('div'); el.className = 'spacer'; break;
             case 'image':
   el = document.createElement('img');
-  el.src = `${basePath}/${raw}`;
   el.alt = raw;
+
+  const primaryPath = `${basePath}/${raw}`;
+  const fallbackPath = `${basePath}/../${raw}`;
+
+  el.src = primaryPath;
+  el.onerror = () => {
+    el.src = fallbackPath;
+  };
   break;
             default: console.warn('Tipo desconhecido:', type);
           }
