--- a/Atividades/Aulas_traduzidas/index.html
+++ b/Atividades/Aulas_traduzidas/index.html
@@ -201,18 +201,29 @@
             case 'text-bold': el = document.createElement('p'); el.style.fontWeight = 'bold'; el.textContent = text; break;
             case 'text-bold-large': el = document.createElement('p'); el.style.fontWeight = 'bold'; el.style.fontSize = '1.5em'; el.textContent = text; break;
             case 'spacer': el = document.createElement('div'); el.className = 'spacer'; break;
-            case 'image':
+            case 'image': {
   el = document.createElement('img');
   el.alt = raw;
 
-  const primaryPath = `${basePath}/${raw}`;
-  const fallbackPath = `${basePath}/../${raw}`;
+  // caminho 0 – mesma pasta do lesson.txt
+  const p0 = `${basePath}/${raw}`;
+  // caminho 1 – um nível acima (…/aulas)
+  const p1 = `${basePath}/../${raw}`;
+  // caminho 2 – dois níveis acima (…/DataGrammar3)
+  const p2 = `${basePath}/../../${raw}`;
 
-  el.src = primaryPath;
+  el.src = p0;
   el.onerror = () => {
-    el.src = fallbackPath;
+    el.onerror = () => {
+      el.onerror = () => {            // se nem assim achar, some com o “ícone quebrado”
+        el.style.display = 'none';
+      };
+      el.src = p2;                    // tenta dois níveis acima
+    };
+    el.src = p1;                      // tenta um nível acima
   };
   break;
+}  
             default: console.warn('Tipo desconhecido:', type);
           }
           if (el && type !== 'image' && type !== 'spacer') {
