--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -432,7 +432,7 @@ else if (t.startsWith('#IMG:')) {
             img.alt = `Professor ${i}`;
             img.onload = () => {
                 const btn = document.createElement('button');
-                btn.appendChild(img);s
+                btn.appendChild(img);
                 btn.onclick = () => {
                     // monta o caminho do lesson.txt daquela aula
                     const lessonPath = `../../${level}/${unit}/DataGrammar/aulas/aula${i}/lesson.txt`;
